helm/monitoring/monitoring_elb.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: ksy-dev-grafana
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ksy-dev-grafana
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-05ac7d9b7c1509757,subnet-03acee8be974e8d6d
    alb.ingress.kubernetes.io/inbound-cidrs: '119.206.206.251/32'
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=false
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: ksy-dev-prometheus
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ksy-dev-prometheus
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 9090}]'
    alb.ingress.kubernetes.io/subnets: subnet-05ac7d9b7c1509757,subnet-03acee8be974e8d6d
    alb.ingress.kubernetes.io/inbound-cidrs: '119.206.206.251/32'
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=false
    alb.ingress.kubernetes.io/success-codes: '200,302'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
